--- a/index.html
+++ b/index.html
@@ -583,14 +583,14 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://cezarandrici.com">Cezar-Constantin Andrici</a> (PhD Student, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://jerem.yt/">Jérémy Thibault</a> (PhD Student, MPI-SP)</li>
-
-  <li style="margin-bottom: 1ex;"><a href="https://jonathan.baumann.zip/">Jonathan Baumann</a> (Research Intern, ENS Paris-Saclay)
-   -- starting as PhD student at MPI-SP in October 2025</li>
+  <li style="margin-bottom: 1ex;"><a href="https://jonathan.baumann.zip/">Jonathan Baumann</a> (PhD student, MPI-SP)</li>
+  <!-- Research Intern, ENS Paris-Saclay -- until Sept 2025 -->
 
   <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a> (Postdoctoral Researcher, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a> (Research Intern, Portland State University)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://jerem.yt/">Jérémy Thibault</a> (Visitor and Former PhD Student, MPI-SP; PostDoc at EPFL)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto (Rob) Blanco</a> (Visitor and Former PostDoc, MPI-SP; Associate Professor at TU/e)</li>
 </ul>
