--- a/group.html
+++ b/group.html
@@ -42,18 +42,6 @@
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://jerem.yt/">Jérémy Thibault</a></b>
-  <ul>
-    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-08 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (since 2020-05):<br/>
-    Formally Secure Compilation of Compartmentalized C Programs</li>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2018-02 to 2018-07:<br/>
-    <a href="https://arxiv.org/abs/1807.04603">A Trace-based Proof Technique for Secure Compilation</a></li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-[MSc student at <a href="http://www.ens-rennes.fr/">ENS Rennes</a>]
-[PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]
-</div></li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a></b> (Postdoctoral Researcher, MPI-SP)</li>
   <!-- started in May 2025 -->
 
@@ -61,6 +49,18 @@
   <!-- started in April 2025 -->
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a></b> (Research Intern, Portland State University)<!-- -- starting in July 2025 --></li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://jerem.yt/">Jérémy Thibault</a></b>
+  <ul>
+    <li style="margin-top: 1ex;"><b>Graduated PhD Student</b> at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-08 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (2020-05 to 2025-08): Scalable Proof Techniques for Formally Secure Compilation of Compartmentalized Programs</li>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2018-02 to 2018-07:<br/>
+    <a href="https://arxiv.org/abs/1807.04603">A Trace-based Proof Technique for Secure Compilation</a></li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+[MSc student at <a href="http://www.ens-rennes.fr/">ENS Rennes</a>]
+[PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]
+[Now PostDoc at EPFL]
+</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io/">Roberto Blanco</a></b>
   <ul>
@@ -180,7 +180,7 @@
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [PhD Student at University of Pennsylvania]<b>[Soon working on AI assisted verification at Microsoft Research]</b>
+  [PhD Student at University of Pennsylvania]<b>[Senior Research Software Engineer at Microsoft Research]</b>
   </div>
   </li>
 
