--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a> (Research Intern, Portland State University)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://jerem.yt/">Jérémy Thibault</a> (Visitor and Former PhD Student, MPI-SP; PostDoc at EPFL)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://jerem.yt/">Jérémy Thibault</a> (Visitor and Graduated PhD Student, MPI-SP; PostDoc at EPFL)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto (Rob) Blanco</a> (Visitor and Former PostDoc, MPI-SP; Associate Professor at TU/e)</li>
 </ul>
