--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@ I am very fortunate to work with a group of outstanding students and starting re
         as Adjunct Professor (APL) in the <a href="https://informatik.rub.de/en/">CS Faculty</a>
 of <a href="https://www.ruhr-uni-bochum.de/en">RUB</a>:
        <a href="talks/2025-04-30-My-Groups-Journey-in-Secure-Compilation.pdf">slides</a> (2025-04-30)</li>
-      <li><b>Recent invited talk at</b> <a href="https://popl25.sigplan.org/home/PLMW-POPL-2025">Programming Languages Mentoring Workshop@POPL'25</a>: <a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a>, <b><a href="https://www.youtube.com/watch?v=wNS7T5LqqrA">partial video</a></b> (2025-01-21)</li>
+      <li><b>Recent invited talk at</b> <a href="https://popl25.sigplan.org/home/PLMW-POPL-2025">PL Mentoring Workshop@POPL'25</a>: <a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a>, <b><a href="https://www.youtube.com/watch?v=wNS7T5LqqrA">partial video</a></b> (2025-01-21)</li>
       <li><a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense @ Inria Paris</a>: <a href="talks/2019-01-29-Secure-Compilation-Habil.pdf">slides</a> (2019-01-29)</li>
       <li><b>Invited Keynote talk</b> at <a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium (FROM 2018)</a>: <a href="talks/2018-06-20-Secure-Compilation-FROM.pdf">slides</a> (2018-06-20)</li>
     </ul>
@@ -766,7 +766,9 @@ of <a href="https://www.ruhr-uni-bochum.de/en">RUB</a>:
 
   <li style="margin-bottom: 1ex;"><em>Formally Verified Security</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2024-03-21-CS-at-Max-Planck-Open-House.pdf">slides</a> and <b><a href="https://youtu.be/82c0u6-OU_g">video</a></b> (2024-03-21)</li>
+      <li><b>Recent:</b> CASA Retreat: <a href="talks/2025-09-24-FOVSEC-at-CASA-Retreat.pdf">slides</a> (2025-09-24)</li>
+      <li><b>Recent:</b> MPI-SP Retreat: <a href="talks/2025-06-11-FOVSEC-at-MPI-SP-Retreat.pdf">slide</a> (2025-06-11)</li>
+      <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2024-03-21-CS-at-Max-Planck-Open-House.pdf">slides</a> and <b><a href="https://youtu.be/82c0u6-OU_g">video</a></b> (2024-03-21)</li>
       <li><a href="https://casa.rub.de/en/events/casa-summer-school">CASA Summer School 2023</a>: <a href="talks/2023-08-14-CASA-Summer-School.pdf">slides</a> (2023-08-14)</li>
       <li><a href="https://www.mpi-sp.org">MPI-SP</a> Scientific Advisory Board visit: <a href="talks/2023-05-11-SAB-MPI-SP-evaluation.pdf">slides</a> (2023-05-11)</li>
       <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> (2020-04-03)</li>
