--- a/group.html
+++ b/group.html
@@ -129,7 +129,8 @@
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://gitlab.aliens-lyon.fr/lucie.lahaye">Lucie Lahaye</a></b></li>
+<!-- https://gitlab.aliens-lyon.fr/lucie.lahaye -->
+  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pid/370/6453.html">Lucie Lahaye</a></b></li>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2024-05 to 2024-07:<br/>
     Property-based testing in Coq against speculative execution attacks
@@ -140,7 +141,7 @@
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://github.com/jos-len">Joseph Lenormand</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pid/402/4807.html">Joseph Lenormand</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2024-02 to 2024-06:<br/>
     <a href="http://arxiv.org/abs/2503.19609">Nanopass back-translation of multiple traces for secure compilation proofs</a>
@@ -248,25 +249,25 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.etis.ee/CV/erivas/eng/">Exequiel Rivas</a></b>
-  <!-- http://web.archive.org/web/20230111142712/https://dcc.fceia.unr.edu.ar/~erivas/ -->
+  <!-- http://web.archive.org/web/20250330004656/https://dcc.fceia.unr.edu.ar/~erivas/ -->
   <ul>
     <li style="margin-top: 1ex;">Starting Researcher Position at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2019-03 to 2021-02:<br/>
       <a href="https://catalin-hritcu.github.io/students/topics/2018/fstar-topics-tezos.pdf">The Formal Semantics and Evolution of the F* Verification System</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [Now at <a href="https://www.marigold.dev">Marigold</a> (working on <a href="https://ligolang.org/">Ligo</a>)
-   and Tallinn University of Technology]
+  [Then at <a href="https://www.marigold.dev">Marigold</a> (working on <a href="https://ligolang.org/">Ligo</a>)]
+  [Now at Tallinn University of Technology]
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://github.com/kyoDralliam">Kenji Maillard</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://kenji.maillard.blue/">Kenji Maillard</a></b>
   <ul>
     <li style="margin-top: 1ex;"><b>Graduated PhD student</b> at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> and <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> from 2017-01 to 2019-11:<br/>
   <a href="https://kenji.maillard.blue/Writings/PrinciplesOfProgramVerificationForArbitraryMonadicEffects.pdf">Principles of Program Verification for Arbitrary Monadic Effects</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
 [Then PostDoc at Inria in Nantes and University of Chile]<br/>
-[<b>Now on permanent <a href="https://www.inria.fr/en/inria-starting-faculty-position-isfp">Inria Starting Faculty Position</a> in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a>, Nantes</b>]
+[<b>Now on permanent <a href="https://www.inria.fr/en/inria-starting-faculty-position-isfp">Inria Starting Faculty Position</a></b> in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a>, Nantes and Guest at <a href="https://www.tcs.ifi.lmu.de/mitarbeiter_de.html">LMU, Munich</a>]
   </div>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://antoinevanmuylder.github.io">Antoine Van Muylder</a></b>
@@ -310,7 +311,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.univ-orleans.fr/lifo///pageperso.php?id=300&lang=en">Florian Groult</a></b></li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.univ-orleans.fr/lifo/membre/Florian.GROULT">Florian Groult</a></b></li>
   <!-- https://github.com/floriangru -->
   <ul>
     <li style="margin-top: 1ex;">Research Intern/Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> from 2018-14 to 2019-10:<br/>
