--- a/index.html
+++ b/index.html
@@ -775,93 +775,6 @@ of <a href="https://www.ruhr-uni-bochum.de/en">RUB</a>:
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>Certified Programs and Proofs, CPP</em></a>
-    <ul style="font-size: small">
-      <li>Chairs' Report: <a href="https://popl21.sigplan.org/details/CPP-2021/27/Chairs-report-and-community-meeting">slides and video</a> (2021-01-19)</li>
-      <li>Chairs' Report: <a href="https://popl20.sigplan.org/details/CPP-2020-papers/30/PC-Chairs-report">slides and video</a> (2020-01-20)</li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
-    <ul style="font-size: small">
-      <li> <b>Invited Talk</b> at <a href="http://hotspot.compute.dtu.dk/hotspot2020.html">HotSpot Workshop</a>: <a href="talks/2020-09-07-Journey-Beyond-Full-Abstraction-HotSpot.pdf">slides</a> and <b><a href="https://youtu.be/hTLHDJGKKpc">video</a></b> (2020-09-07)</li>
-      <li><a href="https://web.stevens.edu/csf2019/">32nd IEEE Computer Security Foundations Symposium (CSF)</a>: <a href="talks/2019-06-27-Journey-Beyond-Full-Abstraction-CSF.pdf">slides</a> (2019-06-27)</li>
-      <li><a href="https://popl19.sigplan.org/track/prisc-2019">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a> (2019-01-13)</li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em>The Next 700 Relational Program Logics</em></a>
-
-    <ul style="font-size: small">
-      <li>Everest All Hands: <a href="talks/2019-10-11-The-Next-700-Relational-Program-Logics-Everest-Paris.pdf">slides</a> (2019-10-11)</li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em>Dijkstra Monads for All</em></a>
-
-    <ul style="font-size: small">
-      <li>Everest All Hands: <a href="talks/2019-10-10-Dijkstra-Monads-for-All-Everest-Paris.pdf">slides</a> (2019-10-10)</li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em>When Good Components Go Bad</em></a>
-    <ul style="font-size: small">
-      <li><a href="https://gtmfs2020.github.io/programme.html">2020 Meeting</a> of the <a href="http://gtmfsec.irisa.fr/">Formal Methods Working Group of GDR Security</a>: <a href="talks/2020-01-30-When-Good-Components-Go-Bad-GDR-Security-Paris.pdf">slides</a> (2020-01-30)</li>
-      <li><a href="https://www.cse.chalmers.se/research/group/security/talk/css-talk27/">Chalmers Security Seminar</a>: <a href="talks/2019-12-05-When-Good-Components-Go-Bad-Chalmers.pdf">slides</a> (2019-12-05)</li>
-      <li><a href="https://memento.epfl.ch/event/ic-colloquium-when-good-components-go-bad-formal-2/">EPFL IC Colloquium</a>: <a href="talks/2019-09-26-When-Good-Components-Go-Bad-EPFL.pdf">slides</a> (2019-09-26)</li>
-      <li>MPI-SWS, Saarbrücken: <a href="talks/2019-05-23-When-Good-Components-Go-Bad-Saarbruecken.pdf">slides</a> (2019-05-23)</li>
-      <li>CASA-MPI Distinguished Lecture at Ruhr University Bochum: <a href="talks/2019-05-13-When-Good-Components-Go-Bad-Bochum.pdf">slides</a> (2019-05-13)</li>
-      <li><a href="https://www.sigsac.org/ccs/CCS2018/">Computer and Communications Security, CCS 2018</a>: <a href="talks/2018-10-18-When-Good-Components-Go-Bad-CCS.pdf">slides</a> <b><a href="https://www.youtube.com/watch?v=Wwx-g513zFs">video</a></b> (2018-10-18)</li>
-      <li>DARPA SSITH/HOPE PI meeting: <a href="talks/2018-05-30-When-Good-Components-Go-Bad-SSITH-PI-Meeting.pdf">slides</a> (2018-05-30)</li>
-      <li><a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=18201">Dagstuhl Seminar on Secure Compilation</a>: <a href="talks/2018-05-17-When-Good-Components-Go-Bad-Dagstuhl.pdf">slides</a> (2018-05-17)</li>
-      <li><a href="https://www.irif.fr/seminaires/verif/index">IRIF Verification Seminar</a>, Paris 7: <a href="talks/2018-02-26-Secure-Compilation-IRIF.pdf">slides</a> (2018-02-26)</li>
-      <li><a href="http://seminaire-dga.gforge.inria.fr/2017/CatalinHritcu_fr.html">SoSySec seminar: Software and Systems Security</a> at
-IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</a>, <b><a href="https://videos-rennes.inria.fr/video/BkHzYy-jM">video</a></b> (2018-02-05)</li>
-      <li><a href="http://popl18.sigplan.org/track/prisc-2018">Workshop on Principles of Secure Compilation (PriSC'18)</a> at POPL'19 in LA: <a href="https://popl18.sigplan.org/event?action-call-with-get-request-type=1&action253048efca6aee4547702963143c6170288=1&__ajax_runtime_request__=1&context=POPL-2018&event=prisc-2018-formally-secure-compilation-of-unsafe-low-level-components">slides</a> (2018-01-13)</li>
-      <li><a href="https://www.info.uaic.ro/bin/Main/">Al. I. Cuza University of Iasi</a>: <a href="talks/2017-12-18-Secure-Compilation-Infoiasi.pdf">slides</a> (2017-12-18)</li>
-      <li><a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">ESOP PC Workshop</a> at Inria Paris: <a href="talks/2017-12-15-Secure-Compilation-ESOP-PC.pdf">slides</a> (2017-12-15)</li>
-    </ul>
-  </li>
-
-  <!-- <li style="margin-bottom: 1ex;"><em>What's new in F*?</em></a> -->
-
-  <!--   <ul style="font-size: small"> -->
-  <!--     <li>Talk at <a href="">Everest Workshop</a>: <a href="talks/fstar_all_hands_sept_2017/out/fstar-all-hands.html">slides</a> (2017-10-02)</li> -->
-  <!--   </ul> -->
-
-  <!-- </li> -->
-
-  <!-- <li style="margin-bottom: 1ex;"><em>Presentation of Inria Prosecco team</em></a> -->
-
-  <!--   <ul style="font-size: small"> -->
-  <!--     <li><a href="https://www.france-science.org/FADEx-2017-Cybersecurity-EN.html">French-American Doctoral Exchange Program (FADEx) 2017: Cybersecurity</a>: <a href="talks/2017-06-16-INRIA-Prosecco-FADEx.pdf">slides</a> (2017-06-16)</li> -->
-  <!--   </ul> -->
-
-  <!-- </li> -->
-
-  <!-- <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy, EuroS&amp;P 2017</a></em></a> -->
-
-  <!--   <ul style="font-size: small"> -->
-  <!--     <li>General Chair's Welcome Message: <a href="talks/2017-04-26-EuroSP-Welcome.pdf">slides</a> (2017-04-26)</li> -->
-  <!--   </ul> -->
-
-  <!-- </li> -->
-
-  <!-- <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a> -->
-
-  <!--   <ul style="font-size: small"> -->
-  <!--     <li><a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li> -->
-  <!--     <li><a href="https://vals.lri.fr/">LRI VALS</a> seminar at University Paris-Sud: <a href="talks/2017-03-17-Secure-Compilation-LRI.pdf">slides</a> (2017-03-17)</li> -->
-  <!--     <li><a href="http://www-list.cea.fr/recherche-technologique/programmes-de-recherche/systemes-embarques/validation-et-verification">CEA List</a> seminar: <a href="talks/2016-12-13-Secure-Compilation-CEA.pdf">slides</a> (2016-12-13)</li> -->
-  <!--     <li><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a> security seminar: <a href="talks/2016-11-03-Secure-Compilation-MSR.pdf">slides</a> (2016-11-03)</li> -->
-  <!--     <li><a href="http://gallium.inria.fr/">Inria Gallium</a> <a href="http://gallium.inria.fr/seminar.html">seminar</a>: <a href="talks/2016-09-02-Secure-Compilation-Gallium.pdf">slides</a> (2016-09-02)</li> -->
-  <!--     <li>Secure compilation mini-workshop at Inria Paris: <a href="talks/2016-08-17-Secure-Compilation-Mini-Workshop-Paris.pdf">slides</a> (2016-08-17)</li> -->
-  <!--     <li>ERC Starting Grant interview: <a href="talks/2016-05-31-Secure-Compilation-ERC.pdf">slides</a> (2016-05-31)</li> -->
-  <!--     <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a>: <a href="talks/2016-03-02-Micro-Policies-Secure-Compilation-Prosecco.pdf">slides</a> (2016-03-02)</li> -->
-  <!--     <li><a href="http://www.mpi-sws.org/">MPI-SWS</a> <a href="http://www.mpi-sws.org/index.php?n=events/swscolloquium/program">Colloquium</a>: <a href="talks/2016-02-22-Micro-Policies-Secure-Compilation-MPI-SWS.pdf">slides</a> (2016-02-22)</li> -->
-  <!--   </ul> -->
-  <!-- </li> -->
-
 </ul>
 
 <h2 id="teaching">Teaching</h2>
@@ -901,18 +814,26 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <h2 id="tools">Software Tools</h2>
 
-<p>Here are my current software projects. For a complete list of software please look <a href="software.html">here</a>.</p>
+<p>Here are the software projects in which I was recently involved.
+  For a complete list of software please look <a href="software.html">here</a>.</p>
 
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-    <a href="https://github.com/secure-compilation">ERC SECOMP: Efficient Formally Secure Compilation</a></li>
+    <a href="https://github.com/secure-compilation/SECOMP">SECOMP: Secure Compilation Chain for Compartmentalized C Programs</a></li>
 
   <li style="margin-bottom: 1ex;">
     <a href="https://github.com/FStarLang">F*: Program Verification System for Effectful Programs</a> <!-- (with Nikhil Swamy, etal) --></li>
 
   <li style="margin-bottom: 1ex;">
-    <a href="https://github.com/micro-policies">Micro-Policies:
-      Formally Verified, Tag-Based Security Monitors</a>
+    <a href="">SSProve: A foundational framework for modular cryptographic proofs in Coq</a></li>
+
+  <li style="margin-bottom: 1ex;">
+    <a href="https://github.com/QuickChick">QuickChick:
+      Property-based testing plugin for Coq</a></li>
+
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--   <a href="https://github.com/micro-policies">Micro-Policies: -->
+  <!--     Formally Verified, Tag-Based Security Monitors</a> -->
       <!-- (with Arthur Azevedo de Amorim, André DeHon, Maxime Dénès, Udit Dhawan, -->
       <!--  Nick Giannarakis, Yannis Juglaret, Benjamin C. Pierce, -->
       <!--  Antal Spector-Zabusky, and Andrew Tolmach) --></li>
@@ -946,7 +867,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
   <li>Pronouncing my name: /kətəlin hritsku/, <a href="sound/catalin_hritcu.mp3">mp3</a>, <a href="sound/catalin_hritcu.aiff">aiff</a></li>
     <li>Spelling my name in LaTeX: <code>C\u{a}t\u{a}lin Hri\cb{t}cu</code> after doing <code>\usepackage{combelow}</code></li>
     <li>Spelling my name in HTML: <code>C&amp;#259;t&amp;#259;lin Hri&amp;#539;cu</code></li>
-  <li><a href="authorizer.html">Links using ACM Author-Izer</a></li>
+  <!-- <li><a href="authorizer.html">Links using ACM Author-Izer</a></li> -->
 </ul>
 
 </body>
