--- a/software.html
+++ b/software.html
@@ -22,25 +22,30 @@
 
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-    <a href="https://github.com/secure-compilation">ERC SECOMP: Efficient Formally Secure Compilation</a></li>
+    <a href="https://github.com/secure-compilation/SECOMP">SECOMP: Secure Compilation Chain for Compartmentalized C Programs</a>
+    (with Jérémy Thibault, Roberto Blanco, Dongjae Lee, Sven Argo, Arthur Azevedo de Amorim,
+     Aïna Linn Georges, and Andrew Tolmach)</li>
 
   <li style="margin-bottom: 1ex;">
-    <a href="https://www.fstar-lang.org">F*: From Program Verification System
-      to Proof Assistant</a> (with Nikhil Swamy, Chantal
-      Keller, Aseem Rastogi, Antoine Delignat-Lavaud, Simon Forest,
-      Karthik Bhargavan, Cédric Fournet, and others)</li>
+    <a href="https://www.fstar-lang.org">F*: Program Verification System for Effectful Programs</a>
+     (with Nikhil Swamy, Guido Martínez, Aseem Rastogi, Tahina Ramananandro, and others)</li>
 
   <li style="margin-bottom: 1ex;">
-    <a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">Luck: A Domain Specific Language For Property-Based Generators</a>
-    (with Leonidas Lampropoulos, Li-yao Xia, Benjamin C. Pierce,
-     John Hughes, and Zoe Paraskevopoulou)</li>
+    <a href="">SSProve: A foundational framework for modular cryptographic proofs in Coq</a>
+     (with Philipp G. Haselwarter, Exequiel Rivas, Antoine Van Muylder, Théo Winterhalter,
+      Carmine Abate, Nikolaj Sidorenco, Kenji Maillard, and Bas Spitters, and others)</li>
 
   <li style="margin-bottom: 1ex;">
     <a href="https://github.com/QuickChick">QuickChick:
       Property-based testing plugin for Coq, including 
       a foundational verification framework for testing code</a>
-      (with Maxime Dénès, Leonidas Lampropoulos, Zoe Paraskevopoulou,
-       and Benjamin C. Pierce)</li>
+      (with Leonidas Lampropoulos, Maxime Dénès, Zoe Paraskevopoulou,
+       Benjamin C. Pierce, and others)</li>
+
+  <li style="margin-bottom: 1ex;">
+    <a href="https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf">Luck: A Domain Specific Language For Property-Based Generators</a>
+    (with Leonidas Lampropoulos, Li-yao Xia, Benjamin C. Pierce,
+     John Hughes, and Zoe Paraskevopoulou)</li>
 
   <li style="margin-bottom: 1ex;">
     <a href="https://github.com/micro-policies">Micro-Policies:
