--- a/talks.html
+++ b/talks.html
@@ -24,27 +24,67 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
-
+  <li style="margin-bottom: 1ex;"><em>My Group's Journey in Secure Compilation</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://popl19.sigplan.org/track/prisc-2019">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a> (2019-01-13)</li>
+      <li><b>Recent:</b> <a href="https://informatik.rub.de/antrittsvorlesung-catalin-hritcu/">Inaugural Lecture</a>
+        as Adjunct Professor (APL) in the <a href="https://informatik.rub.de/en/">CS Faculty</a>
+of <a href="https://www.ruhr-uni-bochum.de/en">RUB</a>:
+       <a href="talks/2025-04-30-My-Groups-Journey-in-Secure-Compilation.pdf">slides</a> (2025-04-30)</li>
+      <li><b>Recent invited talk at</b> <a href="https://popl25.sigplan.org/home/PLMW-POPL-2025">PL Mentoring Workshop@POPL'25</a>: <a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a>, <b><a href="https://www.youtube.com/watch?v=wNS7T5LqqrA">partial video</a></b> (2025-01-21)</li>
+      <li><a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense @ Inria Paris</a>: <a href="talks/2019-01-29-Secure-Compilation-Habil.pdf">slides</a> (2019-01-29)</li>
+      <li><b>Invited Keynote talk</b> at <a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium (FROM 2018)</a>: <a href="talks/2018-06-20-Secure-Compilation-FROM.pdf">slides</a> (2018-06-20)</li>
     </ul>
-
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a>
-
+  <li style="margin-bottom: 1ex;"><em>SECOMP: Formally Secure Compilation of Compartmentalized C Programs</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://www.nomadic-labs.com/">Nomadic Labs Paris</a> (<a href="https://tezos.com">Tezos</a>): <a href="talks/fstar_tezos_nov_2018/out/fstar-tezos.html">slides</a>, <b><a href="https://youtu.be/SPCko8ACB0M">video</a></b> (2018-11-14)</li>
-      <li><b>Invited Keynote Talk</b> at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
-      <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> (2017-06-14)</li>
+      <li><b>Recent:</b> <a href="https://www.newton.ac.uk/event/bsp/">Big Specification programme at Newton Institute</a>, Cambridge, UK: <a href="talks/2024-10-02-SECOMP-in-Cambridge.pdf">slides</a> (2024-10-02)</li>
+      <li>Short talk at <a href="https://csf2024.ieee-security.org">CSF'24</a>: <a href="talks/2024-07-09-SECOMP-at-CSF-24-Short-Talks.pdf">slides</a> (2024-07-12)</li>
+      <li><a href="https://research-symposium.mpi-sws.org">MPI-SWS Research Symposium</a>: <a href="talks/2023-03-10-MPI-SWS-Research-Symposium.pdf">slides</a> (2023-03-10)</li>
+      <li><b></b> <a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a>: <a href="talks/2021-12-01-Formally-verifying-a-secure-compilation-chain-for-unsafe-C-components-at-Dagstuhl.pdf">slides</a> (2021-12-01)</li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em>Short teaser for our courses at Ruhr Uni Bochum</em></a>
+    <ul style="font-size: small">
+      <li><b>Recent:</b> Introduction of MPI-SP during final <a href="https://www.youtube.com/channel/UC1usFRN4LCMcfIV7UjHNuQg/videos">Intro to Cryptography</a> lecture:
+        <a href="talks/2024-07-19-Courses-at-RUB.pdf">slides</a> and <b><a href="https://youtu.be/2JYd_IKh1mI">video</a></b> (2024-07-19)</li>
     </ul>
 
+  <li style="margin-bottom: 1ex;"><em>Formally Verified Security</em></a>
+    <ul style="font-size: small">
+      <li><b>Recent:</b> CASA Retreat: <a href="talks/2025-09-24-FOVSEC-at-CASA-Retreat.pdf">slides</a> (2025-09-24)</li>
+      <li><b>Recent:</b> MPI-SP Retreat: <a href="talks/2025-06-11-FOVSEC-at-MPI-SP-Retreat.pdf">slide</a> (2025-06-11)</li>
+      <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2024-03-21-CS-at-Max-Planck-Open-House.pdf">slides</a> and <b><a href="https://youtu.be/82c0u6-OU_g">video</a></b> (2024-03-21)</li>
+      <li><a href="https://casa.rub.de/en/events/casa-summer-school">CASA Summer School 2023</a>: <a href="talks/2023-08-14-CASA-Summer-School.pdf">slides</a> (2023-08-14)</li>
+      <li><a href="https://www.mpi-sp.org">MPI-SP</a> Scientific Advisory Board visit: <a href="talks/2023-05-11-SAB-MPI-SP-evaluation.pdf">slides</a> (2023-05-11)</li>
+      <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> (2020-04-03)</li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em>Certified Programs and Proofs, CPP</em></a>
+    <ul style="font-size: small">
+      <li>Chairs' Report: <a href="https://popl21.sigplan.org/details/CPP-2021/27/Chairs-report-and-community-meeting">slides and video</a> (2021-01-19)</li>
+      <li>Chairs' Report: <a href="https://popl20.sigplan.org/details/CPP-2020-papers/30/PC-Chairs-report">slides and video</a> (2020-01-20)</li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
+    <ul style="font-size: small">
+      <li> <b>Invited Talk</b> at <a href="http://hotspot.compute.dtu.dk/hotspot2020.html">HotSpot Workshop</a>: <a href="talks/2020-09-07-Journey-Beyond-Full-Abstraction-HotSpot.pdf">slides</a> and <b><a href="https://youtu.be/hTLHDJGKKpc">video</a></b> (2020-09-07)</li>
+      <li><a href="https://web.stevens.edu/csf2019/">32nd IEEE Computer Security Foundations Symposium (CSF)</a>: <a href="talks/2019-06-27-Journey-Beyond-Full-Abstraction-CSF.pdf">slides</a> (2019-06-27)</li>
+      <li><a href="https://popl19.sigplan.org/track/prisc-2019">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a> (2019-01-13)</li>
+    </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><em>When Good Components Go Bad</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://www.sigsac.org/ccs/CCS2018/">Computer and Communications Security, CCS 2018</a>: <a href="talks/2018-10-18-When-Good-Components-Go-Bad-CCS.pdf">slides</a> (2018-10-18)</li>
+      <li><a href="https://gtmfs2020.github.io/programme.html">2020 Meeting</a> of the <a href="http://gtmfsec.irisa.fr/">Formal Methods Working Group of GDR Security</a>: <a href="talks/2020-01-30-When-Good-Components-Go-Bad-GDR-Security-Paris.pdf">slides</a> (2020-01-30)</li>
+      <li><a href="https://www.cse.chalmers.se/research/group/security/talk/css-talk27/">Chalmers Security Seminar</a>: <a href="talks/2019-12-05-When-Good-Components-Go-Bad-Chalmers.pdf">slides</a> (2019-12-05)</li>
+      <li><a href="https://memento.epfl.ch/event/ic-colloquium-when-good-components-go-bad-formal-2/">EPFL IC Colloquium</a>: <a href="talks/2019-09-26-When-Good-Components-Go-Bad-EPFL.pdf">slides</a> (2019-09-26)</li>
+      <li>MPI-SWS, Saarbrücken: <a href="talks/2019-05-23-When-Good-Components-Go-Bad-Saarbruecken.pdf">slides</a> (2019-05-23)</li>
+      <li>CASA-MPI Distinguished Lecture at Ruhr University Bochum: <a href="talks/2019-05-13-When-Good-Components-Go-Bad-Bochum.pdf">slides</a> (2019-05-13)</li>
+      <li><a href="https://www.sigsac.org/ccs/CCS2018/">Computer and Communications Security, CCS 2018</a>: <a href="talks/2018-10-18-When-Good-Components-Go-Bad-CCS.pdf">slides</a> <b><a href="https://www.youtube.com/watch?v=Wwx-g513zFs">video</a></b> (2018-10-18)</li>
       <li>DARPA SSITH/HOPE PI meeting: <a href="talks/2018-05-30-When-Good-Components-Go-Bad-SSITH-PI-Meeting.pdf">slides</a> (2018-05-30)</li>
       <li><a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=18201">Dagstuhl Seminar on Secure Compilation</a>: <a href="talks/2018-05-17-When-Good-Components-Go-Bad-Dagstuhl.pdf">slides</a> (2018-05-17)</li>
       <li><a href="https://www.irif.fr/seminaires/verif/index">IRIF Verification Seminar</a>, Paris 7: <a href="talks/2018-02-26-Secure-Compilation-IRIF.pdf">slides</a> (2018-02-26)</li>
@@ -53,6 +93,20 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
       <li><a href="http://popl18.sigplan.org/track/prisc-2018">Workshop on Principles of Secure Compilation (PriSC'18)</a> at POPL'19 in LA: <a href="https://popl18.sigplan.org/event?action-call-with-get-request-type=1&action253048efca6aee4547702963143c6170288=1&__ajax_runtime_request__=1&context=POPL-2018&event=prisc-2018-formally-secure-compilation-of-unsafe-low-level-components">slides</a> (2018-01-13)</li>
       <li><a href="https://www.info.uaic.ro/bin/Main/">Al. I. Cuza University of Iasi</a>: <a href="talks/2017-12-18-Secure-Compilation-Infoiasi.pdf">slides</a> (2017-12-18)</li>
       <li><a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">ESOP PC Workshop</a> at Inria Paris: <a href="talks/2017-12-15-Secure-Compilation-ESOP-PC.pdf">slides</a> (2017-12-15)</li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em>The Next 700 Relational Program Logics</em></a>
+
+    <ul style="font-size: small">
+      <li>Everest All Hands: <a href="talks/2019-10-11-The-Next-700-Relational-Program-Logics-Everest-Paris.pdf">slides</a> (2019-10-11)</li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em>Dijkstra Monads for All</em></a>
+
+    <ul style="font-size: small">
+      <li>Everest All Hands: <a href="talks/2019-10-10-Dijkstra-Monads-for-All-Everest-Paris.pdf">slides</a> (2019-10-10)</li>
     </ul>
   </li>
 
@@ -112,7 +166,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
   <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a>
 
     <ul style="font-size: small">
-      <li><a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li>
+      <li><a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="https://web.archive.org/web/20210803014301/http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li>
       <li><a href="https://vals.lri.fr/">LRI VALS</a> seminar at University Paris-Sud: <a href="talks/2017-03-17-Secure-Compilation-LRI.pdf">slides</a> (2017-03-17)</li>
       <li><a href="http://www-list.cea.fr/recherche-technologique/programmes-de-recherche/systemes-embarques/validation-et-verification">CEA List</a> seminar: <a href="talks/2016-12-13-Secure-Compilation-CEA.pdf">slides</a> (2016-12-13)</li>
       <li><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a> security seminar: <a href="talks/2016-11-03-Secure-Compilation-MSR.pdf">slides</a> (2016-11-03)</li>
