--- a/teaching.html
+++ b/teaching.html
@@ -105,7 +105,7 @@
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.infsec.cs.uni-saarland.de/teaching/SS09/PracticalSecurity/">Practical Aspects of Security</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="http://web.archive.org/web/20121022114714/http://www.infsec.cs.uni-saarland.de/teaching/SS09/PracticalSecurity">Practical Aspects of Security</a></b>
     - Advanced Lecture, Saarland University, Summer 2009<br/>
     (<b>Best lecture award</b>).
     Guest lecturer for 3 lectures:
