--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 <p><i>E-mail:</i> <a href="mailto:catalin.hritcu@gmail.com">catalin.hritcu@gmail.com</a> or <a href="mailto:catalin.hritcu@mpi-sp.org">catalin.hritcu@mpi-sp.org</a> </p>
 <p><i>Address:</i>
   <a href="https://www.google.com/maps/place/Universit%C3%A4tsstra%C3%9Fe+142,+44801+Bochum,+Germany/@51.4451438,7.2558755,18z/">Universitätsstraße 142, 44799 Bochum, Germany</a></p>
-<p>On the RUB Campus, Building: MB (aka TZR), Floor 1, Office: S-W 106</p>
+<p>On the RUB Campus, Building: MB (aka TZR), Floor 1, Office: 1/59</p>
 
 <!--
   <ul>
