--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Steering Committee Member</b> since 2024, <b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
-  <li><a href="https://csf2026.ieee-security.org">CSF 2026</a> submission deadlines: <strike>24 July 2025</strike>, 9 October 2025, 29 January 2026</li>
+  <li><a href="https://csf2026.ieee-security.org">CSF 2026</a> submission deadlines: <strike>24 July 2025, 9 October 2025,</strike> 29 January 2026</li>
   <li><a href="https://csf2026.ieee-security.org/">CSF 2026</a>: July 26-29, Lisbon, Portugal (collocated with <a href="https://www.floc26.org/">FLoC 2026</a>)</li>
   </ul>
   </li>
