--- a/index.html
+++ b/index.html
@@ -605,6 +605,33 @@ I am very fortunate to work with a group of outstanding students and starting re
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Danel Ahman,
+    Karthikeyan Bhargavan,
+    Barry Bond,
+    Jay Bosamiya,
+    Christopher Brzuska,
+    Antoine Delignat-Lavaud,
+    Cédric Fournet,
+    Aymeric Fromherz,
+    Sydney Gibson,
+    Chris Hawblitzel,
+    C&#259;t&#259;lin Hri&#539;cu,
+    Markulf Kohlweiss,
+    Guido Martínez,
+    Haobin Ni,
+    Bryan Parno,
+    Jonathan Protzenko,
+    Tahina Ramananandro,
+    Aseem Rastogi,
+    Exequiel Rivas,
+    Nikhil Swamy, and
+    Santiago Zanella-Béguelin.
+    <b><a href="https://project-everest.github.io/assets/everest-perspectives-2025.pdf">Project Everest:
+      Perspectives from Developing Industrial-grade High-Assurance Software</a></b>.
+    Draft from June 2025.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Jérémy Thibault,
     Joseph Lenormand, and
     C&#259;t&#259;lin Hri&#539;cu.
