--- a/group.html
+++ b/group.html
@@ -524,7 +524,7 @@ Formal Verification Researcher at <a href="https://ethereum.foundation/">Ethereu
     <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-27:<br/> <a href="https://thorstent.github.io/theses/bachelor.pdf"> Spi2F# - A Prototype Code Generator for Security Protocols</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [Then PhD student at <a href="http://pub.ist.ac.at/~ttarrach/">IST Austria</a>] [Then research engineer at the <a href="http://www.ait.ac.at/">Austrian Institute of Technology (AIT)</a>]
-<b>[Now Senior Applied Scientist at AWS in the S3 Automated Reasoning Group]</b>
+<b>[Now Senior Applied Scientist at Amazon Web Services (AWS) in the S3 Automated Reasoning Group]</b>
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/martin-grochulla-824414135/">Martin Grochulla</a></b>
