--- a/group.html
+++ b/group.html
@@ -52,6 +52,7 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="https://jerem.yt/">Jérémy Thibault</a></b>
   <ul>
+    <li style="margin-top: 1ex;">Visitor at <a href="https://www.mpi-sp.org/">MPI-SP</a>, since 2025-09
     <li style="margin-top: 1ex;"><b>Graduated PhD Student</b> at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-08 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (2020-05 to 2025-08): Scalable Proof Techniques for Formally Secure Compilation of Compartmentalized Programs</li>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2018-02 to 2018-07:<br/>
     <a href="https://arxiv.org/abs/1807.04603">A Trace-based Proof Technique for Secure Compilation</a></li>
