--- a/group.html
+++ b/group.html
@@ -50,6 +50,8 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a></b> (Research Intern, Portland State University)<!-- -- starting in July 2025 --></li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/abigail-pribisova/">Abigail Pribisova</a></b> (Research Immersion Lab, <a href="https://www.cis.mpg.de/csmaxplanck-overview/">cs@max planck</a> student)</li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://jerem.yt/">Jérémy Thibault</a></b>
   <ul>
     <li style="margin-top: 1ex;">Visitor at <a href="https://www.mpi-sp.org/">MPI-SP</a>, since 2025-09
