--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b> (<b>Steering Committee Chair</b> 2019--2023, <b>Steering Committee Member</b> since 2023, also <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
   <ul>
-  <li><a href="https://popl26.sigplan.org/home/prisc-2026">PriSC 2026</a> deadline: 2 November 2025</li>
+  <!-- <li><a href="https://popl26.sigplan.org/home/prisc-2026">PriSC 2026</a> deadline: 2 November 2025</li> -->
   <li><a href="https://popl26.sigplan.org/home/prisc-2026">PriSC 2026</a> workshop: around 11 January 2026, Rennes, France (with <a href="https://popl26.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
