--- a/group.html
+++ b/group.html
@@ -42,10 +42,26 @@
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a></b> (Postdoctoral Researcher, MPI-SP)</li>
-  <!-- started in May 2025 -->
+  <li style="margin-bottom: 1ex;"><b><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a></b></li>
+  <ul>
+    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.mpi-sp.org/">MPI-SP</a>, since 2025-05:<br/>
+    Formally Secure Compilation against Spectre Attacks
+    </li>
+  </ul>
+  </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://jonathan.baumann.zip">Jonathan Baumann</a></b> (Research Intern, ENS Paris-Saclay)</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://jonathan.baumann.cv">Jonathan Baumann</a></b>
+  <ul>
+    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.mpi-sp.org/">MPI-SP</a>, since 2025-10:<br/>
+    Formally Secure Compilation against Spectre Attacks
+    </li>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2020-04 to 2020-09:<br/>
+    <a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a>
+    </li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [MSc student at ENS Paris-Saclay] [PhD student at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]
+  </li>
   <!-- started in April 2025 -->
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a></b> (Research Intern, Portland State University)<!-- -- starting in July 2025 --></li>
@@ -65,9 +81,16 @@
 [Now PostDoc at EPFL]
 </div></li>
 
+</ul>
+
+
+<h2>Past Group Members</h2>
+
+<ul style="width:42em; text-align: left">
+
   <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io/">Roberto Blanco</a></b>
   <ul>
-    <li style="margin-top: 1ex;">Visitor at <a href="https://www.mpi-sp.org/">MPI-SP</a>, since 2025-05
+    <li style="margin-top: 1ex;">Visitor at <a href="https://www.mpi-sp.org/">MPI-SP</a>, from 2025-05 to 2025-10
     </li>
     <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2020-05 to 2025-04<br/>
     <a href="https://secure-compilation.github.io">Formally Secure Compilation</a> and Formal Methods for Side-Channel Secure Hardware
@@ -79,12 +102,6 @@
   [<b>Started as Associate Professor at TU Eindhoven in May 2025</b>]
   </div>
   </li>
-</ul>
-
-
-<h2>Past Group Members</h2>
-
-<ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><b><a href="">Basile Schlosser</a></b>
   <ul>
