--- a/group.html
+++ b/group.html
@@ -42,14 +42,6 @@
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a></b></li>
-  <ul>
-    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.mpi-sp.org/">MPI-SP</a>, since 2025-05:<br/>
-    Formally Secure Compilation against Spectre Attacks
-    </li>
-  </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://jonathan.baumann.cv">Jonathan Baumann</a></b>
   <ul>
     <li style="margin-top: 1ex;">PhD Student at <a href="https://www.mpi-sp.org/">MPI-SP</a>, since 2025-10:<br/>
@@ -61,8 +53,16 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
   [MSc student at ENS Paris-Saclay] [PhD student at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]
+  </div>
   </li>
-  <!-- started in April 2025 -->
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a></b></li>
+  <ul>
+    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.mpi-sp.org/">MPI-SP</a>, since 2025-05:<br/>
+    Formally Secure Compilation against Spectre Attacks
+    </li>
+  </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a></b> (Research Intern, Portland State University)<!-- -- starting in July 2025 --></li>
 
