--- a/group.html
+++ b/group.html
@@ -62,6 +62,8 @@
     Formally Secure Compilation against Spectre Attacks
     </li>
   </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  </div>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a></b> (Research Intern, Portland State University)<!-- -- starting in July 2025 --></li>
