--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 <h2 id="projects">Recent Research Projects</h2>
 
 <ul>
+  <li style="margin-bottom: 1ex;"><b>
+    <a href="https://catalin-hritcu.github.io/students/topics/2025/fs-casa-mpri-2025.pdf">Formally Secure Compilation Against Spectre Attacks</a></b>
+(<a href="https://catalin-hritcu.github.io/students/topics/2025/fs-casa-mpri-2025.pdf">topics</a>;
+ <a href="http://arxiv.org/abs/2502.03203">paper</a>;
+ <a href="https://github.com/secure-compilation/fslh-rocq">code</a>)
+
   <li style="margin-bottom: 1ex;"><b><a href="https://secure-compilation.github.io/">ERC SECOMP:
                                        Formally Secure Compilation</a></b>
 (<a href="https://catalin-hritcu.github.io/students/topics/2024/secomp-topics-2024.pdf">topics</a>;
