--- a/index.html
+++ b/index.html
@@ -809,6 +809,7 @@ of <a href="https://www.ruhr-uni-bochum.de/en">RUB</a>:
 
   <li style="margin-bottom: 1ex;"><em>Formally Verified Security</em></a>
     <ul style="font-size: small">
+      <li><b>Recent:</b> CS@max planck Virtual Networking Event: <a href="talks/2025-11-14-CS-at-Max-Planck-Virtual-Networking-Event.pdf">slides</a> (2025-11-14)</li>
       <li><b>Recent:</b> CASA Retreat: <a href="talks/2025-09-24-FOVSEC-at-CASA-Retreat.pdf">slides</a> (2025-09-24)</li>
       <li><b>Recent:</b> MPI-SP Retreat: <a href="talks/2025-06-11-FOVSEC-at-MPI-SP-Retreat.pdf">slide</a> (2025-06-11)</li>
       <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2024-03-21-CS-at-Max-Planck-Open-House.pdf">slides</a> and <b><a href="https://youtu.be/82c0u6-OU_g">video</a></b> (2024-03-21)</li>
