--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     Santiago Zanella-Béguelin.
     <b><a href="https://project-everest.github.io/assets/everest-perspectives-2025.pdf">Project Everest:
       Perspectives from Developing Industrial-grade High-Assurance Software</a></b>.
-    Draft from June 2025.
+    Accepted at TOPLAS. Draft from June 2025.
   </li>
 
   <li style="margin-bottom: 1ex;">
