--- a/publications.html
+++ b/publications.html
@@ -562,6 +562,33 @@
 <ol id="journal" start="38" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Danel Ahman,
+    Karthikeyan Bhargavan,
+    Barry Bond,
+    Jay Bosamiya,
+    Christopher Brzuska,
+    Antoine Delignat-Lavaud,
+    Cédric Fournet,
+    Aymeric Fromherz,
+    Sydney Gibson,
+    Chris Hawblitzel,
+    C&#259;t&#259;lin Hri&#539;cu,
+    Markulf Kohlweiss,
+    Guido Martínez,
+    Haobin Ni,
+    Bryan Parno,
+    Jonathan Protzenko,
+    Tahina Ramananandro,
+    Aseem Rastogi,
+    Exequiel Rivas,
+    Nikhil Swamy, and
+    Santiago Zanella-Béguelin.
+    <b><a href="https://project-everest.github.io/assets/everest-perspectives-2025.pdf">Project Everest:
+      Perspectives from Developing Industrial-grade High-Assurance Software</a></b>.
+    Accepted at TOPLAS. Draft from June 2025.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Philipp G. Haselwarter, 
     Exequiel Rivas, 
     Antoine Van Muylder, 
